# python-obfuscator

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: package-test.yml  publish.yml  python-publish.yml
python_obfuscator/: __init__.py  cli.py  config.py  obfuscator.py  techniques.py  utilities.py
python_obfuscator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
python_obfuscator/cli/: __init__.py
python_obfuscator/helpers/: __init__.py  random_datatype.py  variable_name_generator.py
python_obfuscator/techniques/: __init__.py  base.py  registry.py
python_obfuscator/techniques/ast_transforms/: __init__.py  dead_code_injector.py  exec_wrapper.py  string_hex_encoder.py  variable_renamer.py
tests/: test_config.py  test_helpers.py  test_integration.py  test_module.py  test_obfuscator.py  test_registry.py
tests/e2e/: test_e2e.py
tests/e2e/files/: algorithms.py  cipher.py  data_structures.py  functional.py  number_theory.py  oop_simulation.py
tests/techniques/: test_base.py  test_dead_code_injector.py  test_exec_wrapper.py  test_string_hex_encoder.py  test_variable_renamer.py
